# meterboxd

./: .gitignore  package-lock.json  readme.md
backend/: app.py  csvReader.py  database.py  migration.py  models.py  parser.py  publicMovieData.py  pyproject.toml  railway.json  requirements.txt  stats.py  test_image_generation.py  test_mongodb_connection.py  verify_migration.py
backend/cache/: movie_cache.json
backend/overrides/: overrides.json
backend/src/: csvReader.py  parser.py  stats.py
cache/: movie_cache.json
frontend/: index.html  package-lock.json  package.json  parser.py  test-api.js
frontend/public/: index.html
frontend/src/: app.css  app.jsx  main.scss  main.scss.backup
frontend/src/components/: FlickerText.jsx  ModernLoadingScreen.jsx  MovieCardGrid.jsx  ShareableImage.jsx
frontend/src/odometer/: Odometer.css  Odometer.jsx
frontend/src/speedometer/: speedometer.jsx
frontend/src/stats/: ObscuritySection.jsx  Stats.jsx  ToughCrowdSection.jsx  stats.jsx
frontend/src/styles/: README.md  main.scss
frontend/src/styles/base/: _variables.scss
frontend/src/styles/components/: _buttons.scss  _loading.scss  _movie-grid.scss  _shareable-image.scss  _tough-crowd.scss  _upload.scss
frontend/src/upload/: Upload.jsx  upload.jsx
frontend/src/utils/: userTaglines.js
